--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
+    "react-responsive": "^8.2.0",
     "react-scoped-styles": "^0.3.3",
     "react-typography": "^0.16.20",
     "read-time-estimate": "0.0.2",
